--- a/index.html
+++ b/index.html
@@ -18,104 +18,16 @@
 		<meta property="og:description" content="Testing whether pre-registration can help fix our peer review system." />
 		<meta property="og:url" content="https://preregister.science" />
 		<meta property="og:image" content="https://preregister.science/images/header.jpg" />
-        <script type="text/javascript">
-            /*
-            Count down until any date script-
-            By JavaScript Kit (www.javascriptkit.com)
-            Over 200+ free scripts here!
-            Modified by Robert M. Kuhnhenn, D.O. 
-            on 5/30/2006 to count down to a specific date AND time,
-            on 10/20/2007 to a new format, and 1/10/2010 to include
-            time zone offset.
-            */
 
-            var current="On the day of the workshop, please join the live streaming at https://neurips.cc/virtual/2020/protected/workshop_16158.html using the credentials you used to sign up for NeurIPS. Schedule below."    //-->enter what you want the script to display when the target date and time are reached, limit to 20 characters
-            var year=2020;    //-->Enter the count down target date YEAR
-            var month=10;      //-->Enter the count down target date MONTH
-            var day=9;       //-->Enter the count down target date DAY
-            var hour=23;      //-->Enter the count down target date HOUR (24 hour clock)
-            var minute=59;    //-->Enter the count down target date MINUTE
-            var tz=-12;        //-->Offset for your timezone in hours from UTC (see http://wwp.greenwichmeantime.com/index.htm to find the timezone offset for your location)
-
-            //    DO NOT CHANGE THE CODE BELOW!
-            var montharray=new Array("Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec");
-
-            function countdown(yr,m,d,hr,min){
-                theyear=yr;themonth=m;theday=d;thehour=hr;theminute=min;
-                var today=new Date();
-                var todayy=today.getYear();
-                if (todayy < 1000) {todayy+=1900;}
-                var todaym=today.getMonth();
-                var todayd=today.getDate();
-                var todayh=today.getHours();
-                var todaymin=today.getMinutes();
-                var todaysec=today.getSeconds();
-                var todaystring1=montharray[todaym]+" "+todayd+", "+todayy+" "+todayh+":"+todaymin+":"+todaysec;
-                var todaystring=Date.parse(todaystring1)+(tz*1000*60*60);
-                var futurestring1=(montharray[m-1]+" "+d+", "+yr+" "+hr+":"+min);
-                var futurestring=Date.parse(futurestring1)-(today.getTimezoneOffset()*(1000*60));
-                var dd=futurestring-todaystring;
-                var dday=Math.floor(dd/(60*60*1000*24)*1);
-                var dhour=Math.floor((dd%(60*60*1000*24))/(60*60*1000)*1);
-                var dmin=Math.floor(((dd%(60*60*1000*24))%(60*60*1000))/(60*1000)*1);
-                var dsec=Math.floor((((dd%(60*60*1000*24))%(60*60*1000))%(60*1000))/1000*1);
-                if(dday<=0&&dhour<=0&&dmin<=0&&dsec<=0){
-                    document.getElementById('count2').innerHTML=current;
-                    document.getElementById('count2').style.display="inline";
-                    document.getElementById('count2').style.width="390px";
-                    document.getElementById('dday').style.display="none";
-                    document.getElementById('dhour').style.display="none";
-                    document.getElementById('dmin').style.display="none";
-                    document.getElementById('dsec').style.display="none";
-                    document.getElementById('days').style.display="none";
-                    document.getElementById('hours').style.display="none";
-                    document.getElementById('minutes').style.display="none";
-                    document.getElementById('seconds').style.display="none";
-                    document.getElementById('spacer1').style.display="none";
-                    document.getElementById('spacer2').style.display="none";
-                    return;
-                }
-                else {
-                    document.getElementById('count2').style.display="none";
-                    document.getElementById('dday').innerHTML=dday;
-                    document.getElementById('dhour').innerHTML=dhour;
-                    document.getElementById('dmin').innerHTML=dmin;
-                    document.getElementById('dsec').innerHTML=dsec;
-                    setTimeout("countdown(theyear,themonth,theday,thehour,theminute)",1000);
-                }
-            }
-        </script>
 	</head>
-	<body class="is-preload" onload="countdown(year,month,day,hour,minute)">
+	<body class="is-preload">
 		<!-- Header -->
 		<section id="header">
 			<div class="inner">
 				<span class="icon major style0 fa fa-area-chart"></span>
 				<h2 style="background-color: rgba(0,0,0,0.1)">The <strong style="color:#FCCA46;">pre-registration experiment</strong>: <br>an alternative publication model for machine learning research</h2>
 				<h3 style="background-color: rgba(0,0,0,0.1)"><a href="https://neurips.cc/" target="_blank">NeurIPS 2020</a> workshop, on December 11 (from 9:15AM, New York time)</h3>
-<!--				<h4>Proposal submission deadline: October <strike>7th</strike> 9th, 23:59 Anywhere on Earth </h4>-->
-                <table id="table" border="10" style="width:40%;margin-left:auto;margin-right:auto;font-weight:bold;font-size:120%">
-                    <tr>
-                        <td align="center" colspan="6"><div class="numbers" id="count2">title?</div></td>
-                    </tr>
-                    <!-- <tr><td colspan="6">Proposals are due in:</td></tr> -->
-                    <!-- <tr id="spacer1">
-                        <td align="center" ><div class="numbers" ></div></td>
-                        <td align="center" ><div class="numbers" id="dday"></div></td>
-                        <td align="center" ><div class="numbers" id="dhour"></div></td>
-                        <td align="center" ><div class="numbers" id="dmin"></div></td> -->
-                        <!--<td align="center" ><div class="numbers" id="dsec"></div></td>-->
-                        <!-- <td align="center" ><div class="numbers" ></div></td>
-                    </tr>
-                    <tr id="spacer2">
-                        <td align="center" ><div class="title" ></div></td>
-                        <td align="center" ><div class="title" id="days">Days</div></td>
-                        <td align="center" ><div class="title" id="hours">Hours</div></td>
-                        <td align="center" ><div class="title" id="minutes">Minutes</div></td> -->
-                        <!--<td align="center" ><div class="title" id="seconds">Seconds</div></td>-->
-                        <!-- <td align="center" ><div class="title" ></div></td>
-                    </tr> -->
-                </table>
+                <h3 style="background-color: rgba(0,0,0,0.1)">On the day of the workshop, please join the live streaming at <br><a href="https://neurips.cc/virtual/2020/protected/workshop_16158.html">https://neurips.cc/virtual/2020/protected/workshop_16158.html</a> <br>using your NeurIPS registration credentials.</h3>
 			</div>
 		</section>
 		<!-- ------------------------------------------------------------------------------------------------------->
@@ -128,30 +40,35 @@
 				<div class="row gtr-150">
 					
 					<div class="off-1 col-2 off-0-medium col-4-medium">
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938274/incentives-for-researchers">Video</a>)
 						<span class="image fit"><img src="images/bengio.jpg" alt="Yoshua Bengio"></span>
-						<h3><a href="https://yoshuabengio.org/">Yoshua Bengio</a></h3>
+						<h4><a href="https://yoshuabengio.org/">Yoshua Bengio</a></h4>
 						<p>MILA</p>
 					</div>
 					
 					<div class="col-2 col-4-medium">
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938275/can-preregistration-lead-to-better-reproducibility-in-ml-research">Video</a>)
 						<span class="image fit"><img src="images/pineau.jpg" alt="Joelle Pineau"></span>
-						<h3><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h3>
+						<h4><a href="https://www.cs.mcgill.ca/~jpineau/">Joelle Pineau</a></h4>
 						<p>FAIR, MILA, McGill</p>
 					</div>
 
 					<div class="col-2 col-4-medium">
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938273/where-is-machine-learning-going">Video</a>)
 						<span class="image fit"><img src="images/bach.jpg" alt="Francis Bach"></span>
-						<h3><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h3>
+						<h4><a href="https://www.di.ens.fr/~fbach/">Francis Bach</a></h4>
 						<p>INRIA</p>
 					</div>
 
 					<div class="col-2 col-4-medium">
+                        (Live)
 						<span class="image fit"><img src="images/forde.jpg" alt="Jessica Zosa Forde"></span>
-						<h3><a href="https://jzf2101.github.io/">Jessica Zosa Forde</a></h3>
+						<h4><a href="https://jzf2101.github.io/">Jessica Zosa Forde</a></h4>
 						<p>Brown University</p>
 					</div>
 
 					<div class="col-2 col-4-medium">
+                        (<span class="icon fa-video-camera"> <a href="https://slideslive.com/38938270/the-turing-way-transparent-research-through-the-scientific-lifecycle">Video</a>)
 						<span class="image fit"><img src="images/whitaker.jpg" alt="Kirstie Whitaker"></span>
 						<h3><a href="https://www.turing.ac.uk/people/researchers/kirstie-whitaker">Kirstie Whitaker</a></h3>
 						<p>Alan Turing Institute, Cambridge University</p>
@@ -159,7 +76,20 @@
 
 				</div>
 
-			<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FToronto&amp;src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%239E69AF&amp;mode=AGENDA" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <h2>Schedule</h2>
+            <div id="calendar-container"></div>
+            <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.4/jstz.min.js"></script>-->
+            <script type="text/javascript">
+                 // var timezone = encodeURIComponent(jstz.determine().name()); 
+                 var timezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+                 print(timezone)
+                 var pref = '<iframe src="https://calendar.google.com/calendar/embed?mode=agenda&src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&ctz=';
+                 var suff = '" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>';
+                 var iframe_html = pref + timezone + suff;
+                 document.getElementById('calendar-container').innerHTML = iframe_html;
+            </script>
+
+			<!--<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FToronto&amp;src=NzBhOG01dWs0N2lhNmhicmYzcW5paXVxZzRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%239E69AF&amp;mode=AGENDA" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>-->
 			</div>
 		</section>		
 
